# wipeoutPD

./: .gitignore  CMakeLists.txt  Makefile  README.md
.nova/Tasks/: Playdate Simulator.json
Source/: pdxinfo  wipeoutPD.fnt
src/: input.c  input.h  main.c  mem.c  mem.h  platform.c  platform.h  render.c  render.h  system.c  system.h  types.c  types.h  utils.c  utils.h
src/wipeout/: camera.c  droid.c  droid.h  game.c  game.h  hud.c  hud.h  main_menu.c  main_menu.h  menu.c  menu.h  object.c  object.h  particle.c  particle.h  race.c  race.h  scene.c  scene.h  sfx.c  sfx.h  ship.c  ship.h  ship_ai.c  ship_ai.h  ship_player.c  ship_player.h  title.c  title.h  track.c  track.h  ui.c  ui.h  weapon.c  weapon.h
